Add function to display projects

--- a/index.html
+++ b/index.html
@@ -34,11 +34,16 @@
       </div>
       <div class="col-8">
         <table id="project-table" class="table">
+          <thead>
             <tr>
               <th scope="col">Name</th>
               <th scope="col">Type</th>
               <th scope="col">Due</th>
             </tr>
+          </thead>
+          <tbody id="project-table-body">
+       
+          </tbody>
         </table>
       </div>
     </div>
