Added check if fields are empty, don't submit

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
             <div class="mb-3">
               <label for="project-type">Type of project</label>
               <select class="form-select" id="project-type" aria-label="project type">
-                <option selected>Open this select menu</option>
-                <option value="JavaScript">JavaScript</option>
+                <option selected value="JavaScript">JavaScript</option>
                 <option value="HTML">HTML</option>
                 <option value="CSS">CSS</option>
                 <option value="JQuery">JQuery</option>
