--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="container-fluid p-5">
     <div class="row align-items-start">
-      <div class="col-12 col-md-4g">
+      <div class="col-12 col-md-4">
         <div class="card">
           <div class="card-body">
             <h3>Instructions</h3>
