--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <div class="container-fluid p-5">
     <div class="row align-items-start">
+      <!-- Card -->
       <div class="col-12 col-md-4">
         <div class="card">
           <div class="card-body">
@@ -32,6 +33,7 @@
           </div>
         </div>
       </div>
+      <!-- Table -->
       <div class="col-12 col-md-8">
         <table id="project-table" class="table">
           <thead>
@@ -39,6 +41,7 @@
               <th scope="col">Name</th>
               <th scope="col">Type</th>
               <th scope="col">Due</th>
+              <th scope="col"></th>
             </tr>
           </thead>
           <tbody id="project-table-body">
