--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-primary">Add Project</button>
+              <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Add Project</button>
             </div>
           </form>
         </div>
